--- a/.github/workflows/run-on-change.yml
+++ b/.github/workflows/run-on-change.yml
@@ -3,7 +3,7 @@ name: Run Stock Prediction on File Change
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
       - main
