--- a/.github/workflows/stock-prediction.yml
+++ b/.github/workflows/stock-prediction.yml
@@ -26,7 +26,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential wget
 
-    - name: Install TA-Lib
+    - name: Install TA-Lib from source
       run: |
         wget https://sourceforge.net/projects/ta-lib/files/ta-lib/0.4.0/ta-lib-0.4.0-src.tar.gz
         tar -xzf ta-lib-0.4.0-src.tar.gz
@@ -41,7 +41,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install yfinance numpy pandas scikit-learn tensorflow matplotlib scipy
-        pip install hmmlearn fredapi talib-binary joblib requests
+        pip install hmmlearn fredapi
+        # Install TA-Lib Python wrapper
+        pip install TA-Lib
 
     - name: Run stock prediction
       run: python ss.py ${{ github.event.inputs.ticker }}
