--- a/.github/workflows/stockpred.yml
+++ b/.github/workflows/stockpred.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ticker: [ 'RELIANCE.NS','HDFCBANK.NS','ICICIBANK.NS' ]
+        ticker: [ 'RELIANCE.NS','HDFCBANK.NS',
+        'ICICIBANK.NS' ]
 
     steps:
     - name: Checkout code
