--- a/.github/workflows/optimized.yml
+++ b/.github/workflows/optimized.yml
@@ -1,14 +1,14 @@
-name: Stock Prediction Summary of Optimized
+name: Stock Prediction Summary optimised
 
 on:
-  workflow_dispatch:   # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
   run_stock:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symbol: ['RELIANCE.NS', 'HDFCBANK.NS', 'ICICIBANK.NS', 'ITC.NS']
+        symbol: ['RELIANCE.NS', 'HDFCBANK.NS']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -26,21 +26,30 @@ jobs:
       - name: Run stock prediction
         id: predict
         run: |
-          python pred_optimized.py ${{ matrix.symbol }} > output.txt
+          python your_stock_script.py ${{ matrix.symbol }} > output.txt
           # Extract the summary line
-          summary_line=$(grep -E "✅.*" output.txt)
-          echo "summary=${summary_line}" >> $GITHUB_ENV
+          summary_line=$(grep -E "✅.*" output.txt || echo "No summary")
+          echo "$summary_line" > summary.txt
 
-      - name: Display summary
-        run: |
-          echo "Stock Prediction Summary for ${{ matrix.symbol }}:"
-          echo "${{ env.summary }}"
+      - name: Upload summary artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: summary-${{ matrix.symbol }}
+          path: summary.txt
 
   summary_report:
     needs: run_stock
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Download all summaries
+        uses: actions/download-artifact@v3
+        with:
+          path: summaries
+
       - name: Display Combined Summary
         run: |
-          echo "All individual stock predictions finished."
-          echo "Check each job for its summary line."
+          echo "📊 Combined Stock Prediction Summary:"
+          cat summaries/summary-*.txt
