--- a/.github/workflows/optimized.yml
+++ b/.github/workflows/optimized.yml
@@ -1,7 +1,7 @@
-name: Stock Prediction Summary optimised
+name: Stock Prediction Summary Optimized
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   run_stock:
@@ -25,11 +25,15 @@ jobs:
 
       - name: Run stock prediction
         id: predict
-        continue-on-error: true  # prevent workflow stop if a stock fails
+        continue-on-error: true
         run: |
+          echo "📈 Running prediction for ${{ matrix.symbol }}..."
           python your_stock_script.py ${{ matrix.symbol }} > output.txt || true
-          summary_line=$(grep -E "✅.*" output.txt || echo "❌ ${matrix.symbol} failed")
+          # Extract summary line or fallback
+          summary_line=$(grep -E "✅.*" output.txt || echo "❌ ${{ matrix.symbol }} failed or no summary")
           echo "$summary_line" > summary.txt
+          echo "Summary for ${{ matrix.symbol }}:"
+          cat summary.txt
 
       - name: Upload summary artifact
         uses: actions/upload-artifact@v4
@@ -52,4 +56,6 @@ jobs:
       - name: Display Combined Summary
         run: |
           echo "📊 Combined Stock Prediction Summary:"
-          cat summaries/summary-*.txt
+          for file in summaries/summary-*.txt; do
+            cat "$file"
+          done || echo "❌ No summaries found"
