--- a/.github/workflows/optimized.yml
+++ b/.github/workflows/optimized.yml
@@ -8,10 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symbol: ['RELIANCE.NS', 'HDFCBANK.NS']  # Keep small for testing
-
-    outputs:
-      summary: ${{ steps.predict.outputs.summary }}
+        symbol: ['RELIANCE.NS', 'HDFCBANK.NS']
 
     steps:
       - name: Checkout repository
@@ -24,7 +21,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install yfinance pandas numpy scikit-learn lightgbm optuna
 
       - name: Run stock prediction
@@ -35,12 +31,10 @@ jobs:
           output=$(python pred_optimized.py ${{ matrix.symbol }} 2>&1)
           summary=$(echo "$output" | grep "✅ ${{ matrix.symbol }}" || echo "❌ ${{ matrix.symbol }} failed or no data")
           echo "📋 Result: $summary"
-
-          # ✅ Correct way: Use GITHUB_OUTPUT
           echo "summary=$summary" >> $GITHUB_OUTPUT
 
   summary_report:
-    needs: [run_stock]
+    needs: run_stock
     runs-on: ubuntu-latest
     steps:
       - name: Display Combined Summary
@@ -48,13 +42,5 @@ jobs:
           echo "=================================================="
           echo "📊 FINAL COMBINED STOCK PREDICTION SUMMARY"
           echo "=================================================="
-
-          # ✅ Safely access each job's output
-          {
-          {% for job in needs.run_stock.results %}
-          echo "${{ job.outputs.summary }}"
-          {% endfor %}
-          } | sort
-
+          echo "${{ needs.run_stock.outputs.summary }}"
           echo "=================================================="
-          echo "✅ Summary complete."
