--- a/.github/workflows/optimized.yml
+++ b/.github/workflows/optimized.yml
@@ -2,14 +2,31 @@ name: Stock Prediction Summary Optimized
 
 on:
   workflow_dispatch:
+    inputs:
+      symbols:
+        description: 'Comma-separated list of stock symbols'
+        required: true
+        default: 'RELIANCE.NS,HDFCBANK.NS'
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      symbols: ${{ steps.set-symbols.outputs.symbols }}
+    steps:
+      - name: Set symbols array
+        id: set-symbols
+        run: |
+          # Convert comma-separated string to JSON array
+          symbols_array=$(echo '["'${{ github.event.inputs.symbols }}'"]' | sed 's/,/","/g')
+          echo "symbols=$symbols_array" >> $GITHUB_OUTPUT
+
   run_stock:
+    needs: setup
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symbol: ['RELIANCE.NS', 'HDFCBANK.NS']
-
+        symbol: ${{ fromJson(needs.setup.outputs.symbols) }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -33,14 +50,36 @@ jobs:
           echo "📋 Result: $summary"
           echo "summary=$summary" >> $GITHUB_OUTPUT
 
+      - name: Save result to file
+        run: |
+          echo "${{ steps.predict.outputs.summary }}" > result_${{ matrix.symbol }}.txt
+
+      - name: Upload result file
+        uses: actions/upload-artifact@v3
+        with:
+          name: result-${{ matrix.symbol }}
+          path: result_${{ matrix.symbol }}.txt
+
   summary_report:
-    needs: run_stock
+    needs: [setup, run_stock]
     runs-on: ubuntu-latest
     steps:
+      - name: Download all results
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+          pattern: result-*
+          merge-multiple: true
+
       - name: Display Combined Summary
         run: |
           echo "=================================================="
           echo "📊 FINAL COMBINED STOCK PREDICTION SUMMARY"
           echo "=================================================="
-          echo "${{ needs.run_stock.outputs.summary }}"
+          # Read all result files and display their contents
+          for file in artifacts/result_*.txt; do
+            if [ -f "$file" ]; then
+              cat "$file"
+            fi
+          done
           echo "=================================================="
