--- a/.github/workflows/optimized.yml
+++ b/.github/workflows/optimized.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symbol: ['RELIANCE.NS', 'HDFCBANK.NS' ]  # Add more as needed
+        symbol: ['RELIANCE.NS', 'HDFCBANK.NS']  # Add more as needed
 
     steps:
       - name: Checkout repository
@@ -24,8 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install yfinance pandas numpy scikit-learn lightgbm optuna
 
-      - name: Run stock prediction & show summary
+      - name: Run stock prediction & capture summary
         run: |
           output=$(python pred_optimized.py ${{ matrix.symbol }} 2>&1)
           summary=$(echo "$output" | grep "✅ ${{ matrix.symbol }}" || echo "❌ ${{ matrix.symbol }} failed or no data")
-          echo "$summary"
+
+          # Write to job summary (appears on the workflow run page)
+          echo "### $summary" >> $GITHUB_STEP_SUMMARY
